[package]
name = "philiprehberger-dotenv"
version = "0.1.0"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Fast .env file parser with variable interpolation, multi-file layering, and type-safe loading"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-dotenv"
keywords = ["dotenv", "env", "environment", "config", "development"]
categories = ["config", "development-tools"]
